sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/Paragem_Ordem__c.object-meta.xml
<CustomObject>
    <description>Cada registo é um período em que o prazo de uma ordem esteve suspenso, com o motivo, o responsável e os minutos. Existe porque a tabela padrão de pausas de milestone (ObjectMilestonePauseTime) não guarda nada: sem estes registos não há prova para contestar uma penalidade.</description>
    <label>Paragem da ordem</label>
    <nameField>
        <displayFormat>PAR-{00000}</displayFormat>
        <label>Paragem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paragens da ordem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>