sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/fields/Fim__c.field-meta.xml
<CustomField>
    <fullName>Fim__c</fullName>
    <description>Momento em que o prazo voltou a contar. Vazio enquanto a paragem estiver aberta.</description>
    <inlineHelpText>Preenchido quando a ordem sai de Pendente. Uma paragem sem fim é uma ordem parada agora.</inlineHelpText>
    <label>Fim</label>
    <type>DateTime</type>
</CustomField>