sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/fields/Inicio__c.field-meta.xml
<CustomField>
    <fullName>Inicio__c</fullName>
    <description>Momento em que o prazo foi suspenso.</description>
    <inlineHelpText>Preenchido quando a ordem passa a Pendente com um motivo de terceiros.</inlineHelpText>
    <label>Início</label>
    <type>DateTime</type>
</CustomField>