sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/fields/Minutos__c.field-meta.xml
<CustomField>
    <fullName>Minutos__c</fullName>
    <description>Duração da paragem em minutos, contada do início ao fim. É o que se soma no tempo parado da ordem.</description>
    <inlineHelpText>Calculado pelo flow ao fechar a paragem. Se a paragem estiver errada, corrige o início ou o fim e este número não se acerta sozinho.</inlineHelpText>
    <label>Minutos</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>