sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>Motivo da paragem, copiado da ordem no momento em que ela parou. Fica gravado aqui porque o motivo da ordem muda na paragem seguinte.</description>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SC_FS_Motivo_Paragem</valueSetName>
    </valueSet>
</CustomField>