sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <description>Ordem cujo prazo esteve suspenso nesta paragem.</description>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Paragens</relationshipLabel>
    <relationshipName>Paragens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>