sinalcabo/force-app/main/default/objects/Paragem_Ordem__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <description>De quem foi a espera, copiado da ordem no momento em que ela parou.</description>
    <label>Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SC_FS_Responsavel_Paragem</valueSetName>
    </valueSet>
</CustomField>